# Evolution

./: CMakeLists.txt  Crossover.cpp  Crossover.h  Fitness.h  FitnessOfGenome.cpp  FitnessOfPopulation.cpp  Fix.h  FixGenome.cpp  FixPopulation.cpp  Gen.cpp  Gen.h  Generator.cpp  Init.h  Makefile  Mutation.h  MutationOfGenome.cpp  MutationOfPopulation.cpp  Point.h  README.md  Random.cpp  Selection.cpp  Selection.h  main.cpp
Python scripts/: ConvergenceVisual.py  FitnessGraphs.py  SolutionStraightVisual.py  SolutionVisual.py  TestsResultsVisual.py  TestsTimeVisual.py  k-means.py
PythonScripts/: ConvergenceVisual.py  FitnessGraphs.py  InputVisual.py  SolutionStraightVisual.py  SolutionVisual.py  TestsResultsVisual.py  TestsTimeVisual.py  Visual.py  k-means.py  k-meansVisual.py  k-medoids.py  rewriteData.py
data/input/: conf.txt  points.txt
src/: Distance_measures.h  Pathes.h  Test.cpp  header.hpp  main.cpp
src/Crossover/: Crossover.cpp  Crossover.h
src/Fitness/: Distance.cpp  Euclidean.cpp  Fitness.h  FitnessOfGenome.cpp  FitnessOfPopulation.cpp  Manhattan.cpp
src/Fix/: Fix.h  FixGenome.cpp  FixPopulation.cpp
src/Gene/: Gene.cpp  Gene.h  GenePoint.cpp  GenePoint.h
src/Initialization/: Init.cpp  Init.h
src/InputGenerator/: First_generator.cpp  Main_generator.cpp  Second_generator.cpp  first_generator.cpp  generators.h  second_generator.cpp  second_generator.h
src/K-clusters/: k-clusters.cpp  k-clusters.h
src/K-means/: k-means.cpp  k-means.h
src/Mutation/: Mutation.h  MutationOfGenome.cpp  MutationOfPopulation.cpp
src/Other/: DoubleOperations.cpp  DoubleOperations.h  FileOperations.cpp  FileOperations.h  Point.cpp  Point.h  PopulationSort.cpp  PopulationSort.h  Roulette.cpp  Roulette.h
src/Random/: Random.cpp  Random.h
src/Selection/: Selection.cpp  Selection.h
src/Solutions/Auxiliary/: Other.cpp  Other.h  Prints.cpp  Prints.h  ReadData.cpp  ReadData.h  Stat.cpp  Stat.h
src/Solutions/Genetic/: GeneticSolutions.h  MainGenetic.cpp  Pathes.h  Prints.h  ReadData.h  Stat.cpp  Stat.h  advanced-k-cluster.cpp  clusterGA.cpp  first_evolution.cpp  first_g.cpp  k-clusters-evolution.cpp  second_evolution.cpp  third_evolution.cpp
src/Solutions/Genetic/Auxiliary/: Other.cpp  Other.h  Pathes.h  Prints.cpp  Prints.h  ReadData.cpp  ReadData.h  Stat.cpp  Stat.h
src/Solutions/Genetic/First/: first_evolution.cpp  first_evolution.h  first_g.cpp
src/Solutions/Genetic/Second/: second_evolution.cpp  second_evolution.h  second_g.cpp
src/Solutions/Genetic/Third/: third_evolution.cpp  third_evolution.h
src/Solutions/Non-genetic/: Main-non-evolution.cpp  nearest.cpp  nearest.h
src/Termination/: Terminator.cpp  Terminator.h
src/Testing/: TestGenerator.cpp  Testing.cpp
src/fitness/: fit.hpp
src/generators/: gen.cpp
src/genetic operators/crossover/: crossover.hpp
src/genetic operators/init/: init.hpp
src/genetic operators/mutation/: mutation.hpp
src/genetic operators/selection/: selection.hpp
src/objects/: objects.hpp
src/objects/genome/: genome.cpp  genome.hpp
src/objects/population/: population.cpp  population.hpp
src/objects/specific/: point.cpp  specific.hpp
src/random/: random.cpp  random.hpp
src/random generators/: random.cpp
src/solutions/: solution.hpp
src/visualizators/: visual.py
